# foxtrends

./: README.md
.kiro/specs/foxtrends-transformation/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
FoxTrends/: .env.example  PHASE1_COMPLETE.md  README.md  SETUP_COMPLETE.md  TEST_REPORT.md  __init__.py  app.py  conftest.py  foxtrends.db  pyproject.toml  quick_start.sh  run_integration_tests.py  test_system.py
FoxTrends/CommunityInsightAgent/: __init__.py  agent.py
FoxTrends/ContentAnalysisAgent/: __init__.py  agent.py
FoxTrends/Dashboard/: __init__.py
FoxTrends/ForumEngine/: __init__.py  llm_host.py  monitor.py
FoxTrends/NicheEngine/: __init__.py  engine.py  models.py
FoxTrends/ReportEngine/: __init__.py  flask_interface.py
FoxTrends/TrendDiscoveryAgent/: __init__.py  agent.py
FoxTrends/TrendEngine/: __init__.py
FoxTrends/database/: __init__.py  db_manager.py  init_database.py
FoxTrends/scripts/: __init__.py  test_database.py  verify_setup.py
FoxTrends/templates/: analysis.html  dashboard.html  demand_detail.html  index.html
FoxTrends/tests/: __init__.py  test_config_properties.py  test_config_system.py  test_dashboard_api.py  test_dashboard_properties.py  test_database_properties.py  test_forum_engine_properties.py  test_system_integration.py  test_uv_dependencies.py
