[project]
name = "foxtrends"
version = "0.1.0"
description = "Multi-vertical community demand tracking system based on BettaFish"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "FoxTrends Team"}
]
keywords = ["community", "demand-tracking", "multi-agent", "trend-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Web Framework
    "flask>=2.3.3",
    "flask-socketio>=5.3.6",
    "streamlit>=1.28.1",
    "python-socketio>=5.8.0",
    "eventlet>=0.33.3",
    
    # HTTP and Async
    "requests>=2.31.0",
    "httpx>=0.28.1",
    "aiofiles>=23.2.1",
    "aiohttp>=3.8.0",
    
    # LLM Interface
    "openai>=1.3.0",
    
    # Search API
    "tavily-python>=0.3.0",
    
    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "regex>=2023.8.8",
    "jieba>=0.42.1",
    
    # Database
    "pymysql>=1.1.0",
    "aiomysql>=0.2.0",
    "asyncmy>=0.2.9",
    "aiosqlite>=0.21.0",
    "redis>=4.6.0",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    
    # Web Scraping
    "playwright>=1.45.0",
    "pillow>=9.5.0",
    "opencv-python>=4.8.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "parsel>=1.9.1",
    "pyexecjs>=1.5.1",
    
    # Visualization
    "plotly>=5.17.0",
    "matplotlib>=3.9.0",
    "wordcloud>=1.9.3",
    
    # Machine Learning (Optional)
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "tqdm>=4.65.0",
    "tenacity>=8.2.2",
    "loguru>=0.7.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.2.1",
    
    # Web Server
    "fastapi>=0.110.2",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "hypothesis>=6.82.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "CommunityInsightAgent",
    "ContentAnalysisAgent",
    "TrendDiscoveryAgent",
    "NicheEngine",
    "TrendEngine",
    "ForumEngine",
    "ReportEngine",
    "Dashboard",
    "tests",
    "scripts"
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "hypothesis>=6.82.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=FoxTrends --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
